--- a/app-course/package.json
+++ b/app-course/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongodb": "^5.9.2",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.1.14",
