--- a/app-course/package.json
+++ b/app-course/package.json
@@ -22,13 +22,15 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/cqrs": "^10.2.6",
     "@nestjs/platform-express": "^9.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongodb": "^5.9.2",
     "mysql2": "^3.6.5",
-    "reflect-metadata": "^0.1.14",
+    "reflect-metadata": "^0.2.1",
     "rxjs": "^7.2.0",
+    "slugify": "^1.6.6",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
   },
