--- a/app-course/package.json
+++ b/app-course/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/cqrs": "^10.2.6",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/terminus": "^10.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongodb": "^5.9.2",
