--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,9 @@ phases:
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 282865065290.dkr.ecr.us-east-1.amazonaws.com/arquitectura5
   build:
     commands:
+      - echo Copying config files
+      - aws s3 cp s3://arquitectura-curso04-environment/prd/.env .env
+      - aws s3 cp s3://arquitectura-curso04-environment/prd/Dockerrun.aws.json Dockerrun.aws.json
       - echo Building image docker
       - docker-compose -f compose-prd.yaml build
   post_build:
