--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/terminus": "^10.2.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.9.2",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.2.1",
@@ -40,7 +42,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/testing": "^9.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
